<resources>
    <string name="app_name">To do list</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_my_tasks">Minhas Tarefas</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Definir Horário</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_save">Salvar</string>
    <string name="label_select">Selecionar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_edit_task">Editar Tarefa</string>
    <string name="label_you_dont_have_tasks">Ops, Você não possui\nnenhuma tarefa para essa data.</string>
    <string name="label_description">Descrição</string>
    <string name="label_warned_task">Lembrar Tarefa</string>
    <string name="label_remember">Lembrar faltando</string>
    <string name="label_task_type">Tipo de Tarefa</string>
    <string name="label_no_remember_task_description">Fique ligado e não esqueça de fazer sua tarefa no horário.</string>
    <string name="label_remember_task_description">Agora é só esperar que a gente te avisa quando sua tarefa estiver próxima do horário marcado.</string>
    <string name="label_back">Voltar</string>
    <string name="label_task_registred">Sua tarefa foi registrada.</string>
    <string name="label_task_updated">Sua tarefa foi atualizada.</string>
    <string name="label_today">Hoje</string>
    <string name="label_error_no_task_date">Informe a data da tarefa.</string>
    <string name="label_error_no_task_time">Informe o horário da tarefa.</string>
    <string name="label_error_no_reminder_task_time">Informe o horário do lembrete da tarefa.</string>
    <string name="label_finished_task">Marcar tarefa como finalizada</string>
    <string name="label_no_description">Nenhuma descrição foi definida.</string>
    <string name="label_delete_task">Deletar tarefa</string>
    <string name="label_task_finished">Tarefa finalizada</string>
    <string name="label_task_not_finished">Tarefa não concluída</string>
</resources>